--- a/views/layer01/home.ejs
+++ b/views/layer01/home.ejs
@@ -36,7 +36,7 @@
 							Staff registration form
 						</a>
 					<% } else { %>
-						<a href="https://osu.ppy.sh/oauth/authorize?response_type=code&client_id=11451&redirect_uri=https://taevas.xyz/layer01/login" class="button" id="login">
+						<a href="https://osu.ppy.sh/oauth/authorize?response_type=code&client_id=11451&redirect_uri=https://taevas.xyz/login" class="button" id="login">
 							Login <!-- Please login here before registering as a player or as staff :3 -->
 						</a>
 					<% } %>
