--- a/views/root/error.ejs
+++ b/views/root/error.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>what</title>
+		<title>taevas.xyz | what</title>
 		<link rel="stylesheet" type="text/css" href="/root/css/misc.css">
 	</head>
 	<body>
