[ANDMEID] Choose style and create error page

--- a/views/andmeid/home.ejs
+++ b/views/andmeid/home.ejs
@@ -7,8 +7,6 @@
 		<link rel="stylesheet" type="text/css" href="./css/home.css">
 	</head>
 	<body>
-		<div id="message">
-			<h1>WIP</h1>
-		</div>
+		<%- include("partials/header") %>
 	</body>
 </html>
