--- a/public/andmeid/css/header.css
+++ b/public/andmeid/css/header.css
@@ -15,12 +15,11 @@ html {
 
 body {
 	margin: 0;
-	/*min-height: 100vh;*/
 	text-align: center;
 }
 
 header {
-	margin: 20px auto;
+	margin: 20px auto 50px;
 	font-size: 64px;
 	border-bottom: 5px solid;
 	width: 30rem;
@@ -46,7 +45,7 @@ a {
 	padding: 20px;
 	border: 5px solid;
 	border-radius: 53px; /* dang it grandpa */
-	width: min-content;
+	width: 128px;
 	transform: rotate(4deg);
 	box-shadow: 10px 10px black;
 }
