--- a/views/andmeid/home.ejs
+++ b/views/andmeid/home.ejs
@@ -11,6 +11,8 @@
 		<% if (user.id != 7276846) { %>
 			<div class="notification">Currently WIP! This does NOT properly work!</div>
 		<% } %>
-		<%- include("partials/form") %>
+		<div id="main">
+			<%- include("partials/form") %>
+		</div>
 	</body>
 </html>
