--- a/views/andmeid/partials/form.ejs
+++ b/views/andmeid/partials/form.ejs
@@ -1,4 +1,4 @@
-<form id="main" action="create" method="POST">
+<form id="manual" action="create" method="POST">
 	<script type="text/javascript" src="/andmeid/js/form.js"></script>
 	<div id="left">
 		<div class="title"></div>
@@ -18,4 +18,3 @@
 		</div>
 	</div>
 </form>
-<input type="submit" value="Submit!">
