[ANDMEID] Begin relations with database

--- a/views/history/referee.ejs
+++ b/views/history/referee.ejs
@@ -86,7 +86,7 @@
 							<div class="match">
 								<div class="content">
 									<div class="m_name">
-										<a href="<%= match.url %>"><%= match.name %></a>
+										<a href="https://osu.ppy.sh/community/matches/<%= match.id %>"><%= match.name %></a>
 									</div>
 									<div class="players">
 										<% for (let o = 0; o < match.players.length; o++) { %>
