[ANDMEID] Add users

--- a/views/layer01/players.ejs
+++ b/views/layer01/players.ejs
@@ -36,10 +36,10 @@
 						</table>
 						<ul class="reg_info">
 							<li class="discord">
-								DISCORD: <%= players[i].discord %>
+								DISCORD: <%= players[i].discord || "" %>
 							</li>
 							<li class="timezone">
-								TIMEZONE: <%= players[i].timezone %>
+								TIMEZONE: <%= players[i].timezone || "" %>
 							</li>
 						</ul>
 					</li>
