[ANDMEID] Very minor adjustments

--- a/views/andmeid/beatmaps.ejs
+++ b/views/andmeid/beatmaps.ejs
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Andmeid</title>
+		<title>Andmeid | Beatmaps</title>
 		<link rel="stylesheet" type="text/css" href="/andmeid/css/beatmaps.css">
 	</head>
-	<body onload="initForm()">
+	<body>
 		<%- include("partials/header") %>
 		<% if (user.id != 7276846) { %>
 			<div class="notification">Currently WIP! This does NOT properly work!</div>
