--- a/views/andmeid/partials/header.ejs
+++ b/views/andmeid/partials/header.ejs
@@ -1,4 +1,4 @@
 <header>
-	<link rel="stylesheet" type="text/css" href="./css/header.css">
+	<link rel="stylesheet" type="text/css" href="/andmeid/css/header.css">
 	<a href="/andmeid">Andmeid</a>
 </header>
