--- a/views/andmeid/error.ejs
+++ b/views/andmeid/error.ejs
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Andmeid</title>
-		<link rel="stylesheet" type="text/css" href="./css/error.css">
+		<link rel="stylesheet" type="text/css" href="/andmeid/css/error.css">
 	</head>
 	<body>
 		<%- include("partials/header") %>
