--- a/views/andmeid/games.ejs
+++ b/views/andmeid/games.ejs
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Andmeid | Matches</title>
-		<link rel="stylesheet" type="text/css" href="/andmeid/css/matches.css">
+		<title>Andmeid | Games</title>
+		<link rel="stylesheet" type="text/css" href="/andmeid/css/games.css">
 	</head>
 	<body>
 		<%- include("partials/header") %>
