--- a/views/andmeid/partials/form.ejs
+++ b/views/andmeid/partials/form.ejs
@@ -14,7 +14,6 @@
 			
 		</div>
 		<button type="button" onclick="addMap(1)">New map</button>
-		<div id="mappool">
-		</div>
+		<div id="mappool"></div>
 	</div>
 </form>
