--- a/views/andmeid/beatmaps.ejs
+++ b/views/andmeid/beatmaps.ejs
@@ -11,5 +11,36 @@
 		<% if (user.id != 7276846) { %>
 			<div class="notification">Currently WIP! This does NOT properly work!</div>
 		<% } %>
+		<% beatmaps.forEach((b) => { %>
+			<div class="b">
+				<a class="b_name" href="https://osu.ppy.sh/b/<%= b.id %>" target="_blank">
+					<%= b.artist %> - <%= b.title %> [<%= b.difficulty %>]
+				</a>
+				<a class="b_mapper" href="https://osu.ppy.sh/u/<%= b.mapper.id %>" target="_blank">
+					<img class="flag" src="https://osuflags.omkserver.nl/<%= b.mapper.country %>-32.png" alt="<%= b.mapper.country %>"> <%= b.mapper.username %>
+				</a>
+				<% b.scores.forEach((s) => { %>
+					<div class="b_score">
+						<a class="s_player" href="https://osu.ppy.sh/u/<%= s.player.id %>" target="_blank">
+							<img class="flag" src="https://osuflags.omkserver.nl/<%= s.player.country %>-32.png" alt="<%= s.player.country %>"> <%= s.player.username %>
+							<span class="s_score"><%= s.score %></span>
+							<div class="s_mods">
+								<% s.mods.forEach((m) => { %>
+									<span class="s_mod <%= m %>"><%= m %></span>
+								<% }) %>
+							</div>
+							<span class="s_combo"><%= s.combo %></span>
+							<span class="s_acc"><%= s.accuracy_alt %>%</span>
+							<div class="s_stats">
+								<span class="s_300"><%= s.statistics.count_300 %></span>
+								<span class="s_100"><%= s.statistics.count_100 %></span>
+								<span class="s_50"><%= s.statistics.count_50 %></span>
+								<span class="s_miss"><%= s.statistics.count_miss %></span>
+							</div>
+						</a>
+					</div>
+				<% }) %>
+			</div>
+		<% }) %>
 	</body>
 </html>
