[ANDMEID] Proper API
This allows anyone to use Andmeid for anything osu!apiv2
That fills the database only if the "anything" is required by something else that is already in the database

--- a/views/andmeid/partials/header.ejs
+++ b/views/andmeid/partials/header.ejs
@@ -1,3 +1,4 @@
+<script type="text/javascript" src="/andmeid/js/api.js"></script>
 <header>
 	<link rel="stylesheet" type="text/css" href="/andmeid/css/header.css">
 	<a href="/andmeid">Andmeid</a>
