[ANDMEID] Front-end JS overhaul
Introducing:
Element sizes
Getting data from HTML over API whenever possible
Prevent "twin" requests
Add users to scores

This also changes logging to only be done through matches
And the number of max request per minute (40 -> 100)

--- a/views/andmeid/admin.ejs
+++ b/views/andmeid/admin.ejs
@@ -9,7 +9,7 @@
 	<body>
 		<%- include("partials/header") %>
 		<div class="display">
-			<input type="text" class="id" onblur="api('users', this.value, {f: display, d: this.parentElement})">
+			<input type="text" class="id" onblur="api('users', this.value, {size: 'f', host: this.parentElement})">
 		</div>
 	</body>
 </html>
