--- a/views/andmeid/partials/header.ejs
+++ b/views/andmeid/partials/header.ejs
@@ -1,4 +1,9 @@
 <script type="text/javascript" src="/andmeid/js/api.js"></script>
+<script type="text/javascript" src="/andmeid/js/dom.js"></script>
+<script type="text/javascript" src="/andmeid/js/user.js"></script>
+<script type="text/javascript" src="/andmeid/js/match.js"></script>
+<script type="text/javascript" src="/andmeid/js/game.js"></script>
+<script type="text/javascript" src="/andmeid/js/score.js"></script>
 <header>
 	<link rel="stylesheet" type="text/css" href="/andmeid/css/header.css">
 	<a href="/andmeid">Andmeid</a>
