--- a/views/andmeid/specific.ejs
+++ b/views/andmeid/specific.ejs
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Andmeid | User <%= id %></title>
+		<title>Andmeid | <%= `${type[0].toUpperCase()}${type.slice(1)} ${id}` %></title>
 		<link rel="stylesheet" type="text/css" href="/andmeid/css/users.css">
 	</head>
-	<body onload="api('users', '<%= id %>', {size: 'f', host: document.getElementsByClassName('display')[0]})">
+	<body onload="api('<%= type %>', '<%= id %>', {size: 'f', host: document.getElementsByClassName('display')[0]})">
 		<%- include("partials/header") %>
 		<div class="display"></div>
 	</body>
