--- a/views/andmeid/home.ejs
+++ b/views/andmeid/home.ejs
@@ -12,7 +12,7 @@
 			<div class="notification">Currently WIP! This does NOT properly work!</div>
 		<% } %>
 		<div id="main">
-			<%- include("partials/form") %>
+			<!--<%- include("partials/form") %>-->
 		</div>
 	</body>
 </html>
