--- a/views/andmeid/partials/header.ejs
+++ b/views/andmeid/partials/header.ejs
@@ -5,6 +5,7 @@
 <script type="text/javascript" src="/andmeid/js/beatmap.js"></script>
 <script type="text/javascript" src="/andmeid/js/game.js"></script>
 <script type="text/javascript" src="/andmeid/js/score.js"></script>
+<link rel="stylesheet" type="text/css" href="/andmeid/css/common.css">
 <link rel="stylesheet" type="text/css" href="/andmeid/css/matches.css">
 <link rel="stylesheet" type="text/css" href="/andmeid/css/users.css">
 <link rel="stylesheet" type="text/css" href="/andmeid/css/beatmaps.css">
