--- a/public/andmeid/css/common.css
+++ b/public/andmeid/css/common.css
@@ -1,7 +1,7 @@
 *[size="f"] {
 	width: fit-content;
 	margin: auto;
-	padding: 20px 100px;
+	padding: 20px 100px 10px;
 	border: 5px solid;
 	border-radius: 20px;
 	box-shadow: 10px 10px #000;
@@ -13,8 +13,12 @@
 	}
 }
 
+.displays {
+	margin-top: 20px;
+}
+
 .display {
-	margin: 10px;
+	margin: 5px;
 }
 
 .display > div {
@@ -31,8 +35,4 @@
 
 .trigger {
 	border-radius: 0;
-}
-
-.hide {
-	border-bottom: 0;
 }
