--- a/views/layer01/error.ejs
+++ b/views/layer01/error.ejs
@@ -8,8 +8,8 @@
 	</head>
 	<body>
 		<div id="message">
-			<h1><%= status.code %></h1>
-			<h2><%= status.reason %></h2>
+			<h1><%= error.code %></h1>
+			<h2><%= error.message %></h2>
 			<a href="/layer01">Click here to come back to LAYER01</a>
 			<img src="/layer01/images/astolfoSleep.png" style="margin: 20px auto 0 auto;">
 		</div>
