[ANDMEID] Begin supporting copypasting from Google Sheets
Essentially, that'll become the front-end used when someone
would want to create stats for a round/pool

Oh also, it fixes the source of the bug where some elements would
be visible while their siblings were invisible
The bug technically wasn't possible because of the disabled buttons,
but now, disabling buttons has become pointless

--- a/public/andmeid/css/home.css
+++ b/public/andmeid/css/home.css
@@ -1,1 +1,12 @@
+#lists {
+	display: flex;
+}
 
+.list {
+	background-color: #0e101a;
+	width: 30%;
+	margin: 0 auto;
+	border: 5px solid;
+	border-radius: 20px;
+	box-shadow: 10px 10px #000;
+}
